# pce_ros

./: .gitignore  CMakeLists.txt  README.md  ngd_planner_plugin.xml  package.xml  pce_planner_plugin.xml
config/: ngd_planning.yaml  pce_demo.rviz  pce_planning.yaml
include/: gpu_collision_bridge.h  ngd_planner.h  ngd_planner_manager.h  pce_optimization_task.h  pce_planner.h  pce_planner_manager.h  pce_utils.h  visualizer.h
install/: local_setup.sh  setup.sh
install/pce_ros/share/pce_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: demo_sqlite.launch.py  one_box.scene  pce_moveit_generic.launch  pce_panda.launch  pce_standalone.launch
scripts/: activate_gpu.sh  gpu_collision_checker.py  install_gpu_deps.sh  plan_with_pce.py  test_box.py
src/: gpu_collision_bridge.cpp  ngd_planner.cpp  ngd_planner_manager.cpp  pce_bindings.cpp  pce_optimization_task copy.cpp  pce_optimization_task.cpp  pce_planner.cpp  pce_planner_manager.cpp  visualizer.cpp
